crates/eure-macros/tests/compile_fail/default_and_flatten_ext_conflict.rs
use eure::FromEure;

#[derive(FromEure)]
struct Test {
    #[eure(default, flatten_ext)]
    field: String,
}

fn main() {}
