crates/eure-macros/tests/compile_fail/default_and_flatten_ext_conflict.stderr
error: cannot use #[eure(default)] with #[eure(flatten_ext)] on field `field`; flatten_ext parses entire nested types, not optional fields
 --> tests/compile_fail/default_and_flatten_ext_conflict.rs:5:12
  |
5 |     #[eure(default, flatten_ext)]
  |            ^^^^^^^
